--- a/Assets/styles/main.css
+++ b/Assets/styles/main.css
@@ -36,8 +36,9 @@ body::-webkit-scrollbar{
 
 audio{
     position: fixed;
-    right: -255px;
-    top: 0
+    right: -253px;
+    top: 0;
+    z-index: 3;
 }
 
 .remove-after-title::after{
