--- a/Assets/styles/main.css
+++ b/Assets/styles/main.css
@@ -38,9 +38,11 @@ body::-webkit-scrollbar{
 audio{
     position: fixed;
     right: -171px;
-    bottom: 0;
+    top: 50%;
     z-index: 3;
 }
+
+
 
 main{
     padding-bottom: 100px;
